src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Comments Process</fullName>
        <description>Support process for managing comments.</description>
        <isActive>true</isActive>
        <values>
            <fullName>Read</fullName>
        </values>
        <values>
            <fullName>Unread</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Complaints Process</fullName>
        <description>Support process for managing complaints, queries and email cases.</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed - No Resolution</fullName>
        </values>
        <values>
            <fullName>Closed - Resolved</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Customer Services - Subscriptions</fullName>
        <description>Customer Service process for subscriptions</description>
        <isActive>true</isActive>
        <values>
            <fullName>Awaiting Customer Response</fullName>
        </values>
        <values>
            <fullName>Awaiting Internal Response</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
        </values>
        <values>
            <fullName>Pending</fullName>
        </values>
        <values>
            <fullName>Reopened</fullName>
        </values>
        <values>
            <fullName>Resolved</fullName>
        </values>
        <values>
            <fullName>Unread</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Customer Success Case Process</fullName>
        <description>Case process for the Customer Success Team</description>
        <isActive>true</isActive>
        <values>
            <fullName>Check In</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Customer Care Call</fullName>
        </values>
        <values>
            <fullName>Pre-Check In</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Market Share Case Support Process</fullName>
        <description>Case Process to keep track of market share trends</description>
        <isActive>true</isActive>
        <values>
            <fullName>Ambassador Contact</fullName>
        </values>
        <values>
            <fullName>Engagement Contact</fullName>
        </values>
        <values>
            <fullName>Solution Delivery</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Account_Name_txt__c</fullName>
        <formula>Vacancy__r.Booking__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name (txt)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_Check_In_Contact_Date__c</fullName>
        <formula>IF( ISBLANK( Check_In_Call_Date__c ),  Calculated_Check_In_Contact_Date__c ,
Check_In_Call_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Check In Contact Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Customer_Care_Call_Date__c</fullName>
        <formula>IF(ISBLANK( Customer_Care_Call_Date__c ),  Calculated_Customer_Care_Call_Date__c ,
Customer_Care_Call_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Customer Care Call Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ad_End_Date_Time__c</fullName>
        <formula>Vacancy__r.Date_of_Ad_Expiry_on_TES_Global_Site__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ad End Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Ad_Insert_Id__c</fullName>
        <label>Ad Insert Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ad_Number__c</fullName>
        <label>Ad Number</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ad_Performance_Grade__c</fullName>
        <label>Ad Web Performance Grade</label>
        <picklist>
            <picklistValues>
                <fullName>Sub-Optimal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acceptable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ad_Start_Date_Time__c</fullName>
        <formula>Vacancy__r.Date_of_Ad_Publication_on_TES_Site__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ad Start Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Ad_Web_Metrics_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ad Web Metrics Complete?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Agency_CustSuccess__c</fullName>
        <formula>Vacancy__r.Agency__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Agency_Name_txt__c</fullName>
        <formula>Vacancy__r.Booking__r.Agency__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agency Name (txt)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Allocated_Region__c</fullName>
        <formula>SD_Name__r.Mkt_Share_Allocated_Region__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Region used to allocate cases to Ambassadors.</inlineHelpText>
        <label>Allocated Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ambassador_Scheduled_Visit_Date__c</fullName>
        <description>Date the Ambassador is Scheduled to Visit</description>
        <inlineHelpText>Date the Ambassador is Scheduled to Visit</inlineHelpText>
        <label>Ambassador Scheduled Visit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Answer_Resolution__c</fullName>
        <label>Answer/Resolution</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Bill_To_Name_txt__c</fullName>
        <formula>Vacancy__r.Booking__r.Bill_To__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bill To Name (txt)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booking_Name_txt__c</fullName>
        <formula>Vacancy__r.Booking__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Booking Name (txt)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booking__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Booking</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Opportunity.RecordType.Name</field>
                <operation>equals</operation>
                <value>MSL Booking</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Calculated_Check_In_Contact_Date__c</fullName>
        <formula>Vacancy__r.Check_In_Call_Email_Date_Formula__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calculated Check In Contact Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Calculated_Customer_Care_Call_Date__c</fullName>
        <formula>Vacancy__r.Customer_Care_Call_Date_Formula__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calculated Customer Care Call Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Callback_Date_2_Mkt_Share__c</fullName>
        <description>This is used by Engagement Executives to keep track of the second call attempt</description>
        <inlineHelpText>This is used by Engagement Executives to keep track of the second call attempt</inlineHelpText>
        <label>Callback Date - Attempt 2</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Callback_Date_2__c</fullName>
        <label>Check In - Call Attempt Date 2</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Callback_Date_3_Mkt_Share__c</fullName>
        <description>This is used by Engagement Executives to keep track of the final call attempt.</description>
        <inlineHelpText>This is used by Engagement Executives to keep track of the final call attempt.</inlineHelpText>
        <label>Callback Date - Attempt 3</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Callback_Date_3__c</fullName>
        <label>Check In - Call Attempt Date 3</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Callback_Date_4_Mkt_Share__c</fullName>
        <label>Callback Date - Attempt 4</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Callback_Date_Mkt_Share__c</fullName>
        <description>This is used by Engagement Executives to keep track of the first call attempt.</description>
        <inlineHelpText>This is used by Engagement Executives to keep track of the first call attempt.</inlineHelpText>
        <label>Callback Date - Attempt 1</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Callback_Date_Time__c</fullName>
        <label>Callback Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Callback_Date__c</fullName>
        <label>Check In - Call Attempt Date 1</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Care_Call_Date_Chosen_By_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Care Call Date Chosen by Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Owner_Profile__c</fullName>
        <formula>Owner:User.Profile.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Owner Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Stage_Statue__c</fullName>
        <formula>TEXT(Status) &amp;&quot;-&quot;&amp; TEXT(Status_Custom__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Stage/Statue</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Check_In_Call_Date__c</fullName>
        <label>Check In Contact Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Check_In_Date_Time_Closed__c</fullName>
        <inlineHelpText>The time the Call/Email has been completed for the Mid-Campaign Check In.</inlineHelpText>
        <label>Check In Contact Completed Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Check_In_Resolution_Time__c</fullName>
        <formula>-(ROUND((ROUND (8 * ( 
( 5 * FLOOR( ( Check_In_Call_Date__c - DATE( 1900, 1, 8) ) / 7) + 
MIN(5, MOD( Check_In_Call_Date__c - DATE( 1900, 1, 8), 7) + 
MIN( 1, 24 / 8 * ( MOD( (DATETIMEVALUE(TEXT( Check_In_Call_Date__c) + &apos; 09:00:00&apos;)) - DATETIMEVALUE( &apos;1900-01-08 09:00:00&apos; ), 1 ) ) ) 
) 
) 
- 
( 5 * FLOOR( ( DATEVALUE( Check_In_Date_Time_Closed__c ) - DATE( 1900, 1, 8) ) / 7) + 
MIN( 5, MOD( DATEVALUE( Check_In_Date_Time_Closed__c ) - DATE( 1900, 1, 8), 7 ) + 
MIN( 1, 24 / 8 * ( MOD( Check_In_Date_Time_Closed__c - DATETIMEVALUE( &apos;1900-01-08 09:00:00&apos; ), 1) ) ) 
) 
) 
), 
2)), 0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Check In Resolution Time (Hrs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Check_In_Survey_Link__c</fullName>
        <label>Check In Survey Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Classification__c</fullName>
        <formula>Vacancy__r.Classification__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Classification</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Mood__c</fullName>
        <label>Client Mood</label>
        <picklist>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Competitor_Other__c</fullName>
        <label>Competitor-Other</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <label>Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact_First_Name__c</fullName>
        <label>Contact First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Job_Title__c</fullName>
        <formula>IF(ISPICKVAL( Contact.Title__c , &quot;Other&quot;),
 Contact.Title_If_Other__c ,
TEXT(Contact.Title__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Job Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Last_Name__c</fullName>
        <label>Contact Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <label>Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contact_Title_If_Other__c</fullName>
        <label>Contact Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>ABKHAZIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AFGHANISTAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AKROTIRI AND DHEKELIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALAND ISLANDS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALBANIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALGERIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMERICAN SAMOA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANDORRA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANGOLA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANGUILLA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANTARCTICA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANTIGUA AND BARBUDA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARGENTINA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARMENIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARUBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASHMORE AND CARTIER ISLANDS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUSTRALIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUSTRIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZERBAIJAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZORES, AUTONOMOUS REGION OF THE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAHAMAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAHRAIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BANGLADESH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BARBADOS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BELARUS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BELGIUM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BELIZE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BENIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BERMUDA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BHUTAN</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>County_State__c</fullName>
        <label>County/State</label>
        <picklist>
            <controllingField>Country__c</controllingField>
            <picklistValues>
                <fullName>ABERDEEN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ABERDEENSHIRE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALABAMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALASKA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALBERTA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALDERNEY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALLOA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANGLESEY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANGUS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANTRIM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARGYLL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARIZONA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARKANSAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARMAGH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUSTRALIAN CAPITAL TERRITORY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AVON</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AYRSHIRE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BANFFSHIRE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BEDFORDSHIRE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BELFAST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BENBECULA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BERKSHIRE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BERWICKSHIRE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BLAENAU GWENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BRISTOL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BRITISH COLUMBIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BUCKINGHAMSHIRE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BUTE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAERNARFONSHIRE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_Callback_Date__c</fullName>
        <formula>IF( AND( ISPICKVAL(Status, &quot;Check In&quot;), 
ISBLANK(Callback_Date_3__c ), 
ISBLANK( Callback_Date_2__c ), 
NOT(ISBLANK(Callback_Date__c )) 
), 
Callback_Date__c, 
IF(AND(ISPICKVAL(Status, &quot;Check In&quot;), 
ISBLANK(Callback_Date_3__c ), 
NOT(ISBLANK( Callback_Date_2__c )) 
), 
Callback_Date_2__c, 
IF(AND(ISPICKVAL(Status, &quot;Check In&quot;), 
NOT(ISBLANK(Callback_Date_3__c )) 
), 
Callback_Date_3__c, 

IF( AND( ISPICKVAL(Status, &quot;Customer Care Call&quot;), 
ISBLANK(Customer_Care_Call_Attempt_Date_3__c ), 
ISBLANK( Customer_Care_Call_Attempt_Date_2__c ), 
NOT(ISBLANK(Customer_Care_Call_Attempt_Date_1__c )) 
), 
Customer_Care_Call_Attempt_Date_1__c, 
IF(AND(ISPICKVAL(Status, &quot;Customer Care Call&quot;), 
ISBLANK(Customer_Care_Call_Attempt_Date_3__c ), 
NOT(ISBLANK( Customer_Care_Call_Attempt_Date_2__c )) 
), 
Customer_Care_Call_Attempt_Date_2__c, 
IF(AND(ISPICKVAL(Status, &quot;Customer Care Call&quot;), 
NOT(ISBLANK(Customer_Care_Call_Attempt_Date_3__c )) 
), 
Customer_Care_Call_Attempt_Date_3__c, 
Callback_Date__c 
))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Callback Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Customer_Care_Call_Attempt_Date_1__c</fullName>
        <label>Customer Care - Call Attempt Date 1</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Customer_Care_Call_Attempt_Date_2__c</fullName>
        <label>Customer Care - Call Attempt Date 2</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Customer_Care_Call_Attempt_Date_3__c</fullName>
        <label>Customer Care - Call Attempt Date 3</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Customer_Care_Call_Date__c</fullName>
        <label>Customer Care Call Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateTime_Closed__c</fullName>
        <label>Date/Time Closed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Email_Sent__c</fullName>
        <label>Date Email Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Time_Closed__c</fullName>
        <inlineHelpText>Date/Time the Customer Care Call is completed.</inlineHelpText>
        <label>Customer Care Call Completed Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_Remedial_Action_Complete__c</fullName>
        <label>Date/Time Remedial Action Complete</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <description>Date Ad Web Performance was taken.</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <inlineHelpText>Enter the email address if the person is NOT an existing contact</inlineHelpText>
        <label>Email Address</label>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Email_Response_Time__c</fullName>
        <formula>DATEVALUE(Check_In_Date_Time_Closed__c ) -  Date_Email_Sent__c</formula>
        <inlineHelpText>The number of days it takes the customer to complete the survey emailed to them.</inlineHelpText>
        <label>Email Response Time (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GOR__c</fullName>
        <formula>SD_Name__r.local_authority__r.Region__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Government Office Region; Also the Region in the Local Authority related to the School/Organisation.</inlineHelpText>
        <label>GOR</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guardian_Additional_Info__c</fullName>
        <label>Guardian Additional Info</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Guardian_Subscription_End_Date__c</fullName>
        <label>Guardian - Subscription End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hays_Additional_Info__c</fullName>
        <label>Hays Additional Info</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Hays_Subscription_End_Date__c</fullName>
        <label>Hays - Subscription End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Job_Apply_Clicks__c</fullName>
        <label>Job Apply Clicks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Job_Title__c</fullName>
        <formula>IF(NOT(ISBLANK(Vacancy__r.Vacancy_Job_Title__c)),
Vacancy__r.Vacancy_Job_Title__c,
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Type__c</fullName>
        <formula>Vacancy__r.Job_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Views__c</fullName>
        <label>Job Views</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latest_Call_Attempt_Date1__c</fullName>
        <formula>IF 

( Callback_Date_Mkt_Share__c &lt; Callback_Date_2_Mkt_Share__c ,Callback_Date_2_Mkt_Share__c, 

IF( 
Callback_Date_2_Mkt_Share__c &lt; Callback_Date_3_Mkt_Share__c, Callback_Date_3_Mkt_Share__c,

IF( 
Callback_Date_3_Mkt_Share__c &lt; Callback_Date_4_Mkt_Share__c, Callback_Date_4_Mkt_Share__c,

IF( 
Callback_Date_4_Mkt_Share__c &lt; Callback_Date_5_Mkt_Share__c, Callback_Date_5_Mkt_Share__c,

Callback_Date_Mkt_Share__c 


))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Latest Call Attempt Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Local_Auth_Additional_Info__c</fullName>
        <label>Local Auth Additional Info</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Local_Auth_Site_Subscription_End_Date__c</fullName>
        <label>Local Auth Site - Subscription End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Local_Authority__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Local Authority</label>
        <referenceTo>Local_Authority__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lowest_Rating_Score__c</fullName>
        <label>Lowest Rating Score</label>
        <summarizedField>Survey__c.Lowest_Rating_Score__c</summarizedField>
        <summaryForeignKey>Survey__c.Case__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Main_Allocated_Region__c</fullName>
        <formula>IF(SD_Name__r.local_authority__r.Region__c = &quot;London&quot;, &quot;South&quot;, 
IF(SD_Name__r.local_authority__r.Region__c = &quot;Eastern&quot;, &quot;South&quot;, 
IF(SD_Name__r.local_authority__r.Region__c = &quot;East Midlands&quot;, &quot;North&quot;, 
IF(SD_Name__r.local_authority__r.Region__c = &quot;North West&quot;, &quot;North&quot;, 
IF(SD_Name__r.local_authority__r.Region__c = &quot;South East&quot;, &quot;South&quot;, 
IF(SD_Name__r.local_authority__r.Region__c = &quot;South West&quot;, &quot;South&quot;, 
IF(SD_Name__r.local_authority__r.Region__c = &quot;West Midlands&quot;, &quot;North&quot;, 
IF(SD_Name__r.local_authority__r.Region__c = &quot;North East&quot;, &quot;North&quot;, 
IF(SD_Name__r.local_authority__r.Region__c = &quot;Yorkshire And The Humber&quot;, &quot;North&quot;, 
&quot;&quot;)))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Determines whether the school for this case is in the &apos;North&apos; or &apos;South&apos; region of England based on the Local Authority&apos;s Region.</inlineHelpText>
        <label>Main Allocated Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Reason_for_Complaint__c</fullName>
        <label>Main Reason for Complaint</label>
        <picklist>
            <picklistValues>
                <fullName>Advert Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advert Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Booking Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communication Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discount/Upgrade Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate Advert/Subscription</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invoice/Billing Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pricing/Rating Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Related to Customer Success Survey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mid_Campaign_Rating_Score__c</fullName>
        <label>Mid Campaign Rating Score</label>
        <summarizedField>Survey__c.Lowest_Rating_Score__c</summarizedField>
        <summaryFilterItems>
            <field>Survey__c.Mid_Campaign__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Survey__c.Case__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Mobile_Number__c</fullName>
        <label>Mobile Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Person_Responsible__c</fullName>
        <label>Person Responsible</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Post_Campaign_Rating_Score__c</fullName>
        <label>Post Campaign Rating Score</label>
        <summarizedField>Survey__c.Lowest_Rating_Score__c</summarizedField>
        <summaryFilterItems>
            <field>Survey__c.Mid_Campaign__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Survey__c.Case__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Post_Code__c</fullName>
        <label>Post Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Premium_Product__c</fullName>
        <label>Premium Products</label>
        <picklist>
            <picklistValues>
                <fullName>Job of the week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Featured Job</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Featured Employer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sponsored Job</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sponsored Email Alert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contextual Ad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Additional Category</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Priority_Account_Name__c</fullName>
        <description>They use it to sort by Priority and Account Name at the same time</description>
        <formula>TEXT(Priority)  &amp; &quot; - &quot; &amp;  Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Priority - Account Name</label>
        <type>Text</type>
    </fields>
</CustomObject>